trunk/Archive2/7a/0df5932cdf64a2/output
main.cpp: In function 'int main()':
main.cpp:38:16: error: 'make_reverse_iterator' is not a member of 'std'
     auto mut = std::make_reverse_iterator<Strings::iterator>;
                ^
main.cpp:38:60: error: expected primary-expression before '>' token
     auto mut = std::make_reverse_iterator<Strings::iterator>;
                                                            ^
main.cpp:38:61: error: expected primary-expression before ';' token
     auto mut = std::make_reverse_iterator<Strings::iterator>;
                                                             ^
